<resources>
  <string name="holder_listRemoteEvents_endStateVaccinationsAndRecovery_title">Vaccinatiebewijs en herstelbewijs gemaakt</string>
  <string name="holder_listRemoteEvents_endStateRecoveryOnly_title">Er is alleen een herstelbewijs gemaakt</string>
  <string name="holder_fetchRemoteEvents_title">Gegevens ophalen</string>
  <string name="holder_listRemoteEvents_endStateInternationalQROnly_title">Er is alleen een internationaal bewijs gemaakt</string>
  <string name="general_readmore">Lees meer</string>
  <string name="holder_authentication_popup_digid_title">Inloggen afgebroken</string>
  <string name="holder_dcc_alert_message">Je kunt later opnieuw proberen deze QR-code in de app te zetten.</string>
  <string name="holder_recovery_alert_message">Hierdoor stop je het maken van een bewijs en moet je later opnieuw je testuitslag ophalen.</string>
  <string name="holder_test_alert_message">Hierdoor stop je het maken van een bewijs en moet je later opnieuw je testuitslag ophalen.</string>
  <string name="general_cancel">Annuleer</string>
  <string name="general_toMyOverview">Naar mijn bewijzen</string>
  <string name="general_notification">Let op!</string>
  <string name="general_vaccination">vaccinatie</string>
  <string name="holder_menu_paperproof_title">Coronabewijs inscannen</string>
  <string name="holder_addVaccination_title">Gegevens van je vaccinatie ophalen</string>
  <string name="holder_listRemoteEvents_title">Kloppen de gegevens?</string>
  <string name="holder_vaccination_alert_message">Hierdoor stop je het maken van een bewijs en moet je later opnieuw je gegevens ophalen.</string>
  <string name="holder_listRemoteEvents_somethingWrong_title">Klopt er iets niet?</string>
  <string name="holder_eventdetails_vaccinationStatus_complete">ja</string>
  <string name="holder_eventdetails_vaccinationStatus_recovery">ja (eerder corona gehad)</string>
  <string name="holder_eventdetails_vaccinationStatus_firstVaccinationElsewhere">ja (ergens anders gevaccineerd)</string>
  <string name="app_name_test">(Test) CoronaCheck</string>
  <string name="app_name_acc">(Acc) CoronaCheck</string>
  <string name="app_name">CoronaCheck</string>
  <string name="onboarding_title">Onboarding</string>
  <string name="onboarding_screen_1_title">Krijg toegang met je bewijs</string>
  <string name="onboarding_screen_1_description">Jouw gezondheid en die van anderen is belangrijk. Laat daarom je coronabewijs zien om veilig toegang te krijgen tot plekken. Of als je op reis gaat.</string>
  <string name="onboarding_screen_2_title">Bewijs van vaccinatie, herstel of test</string>
  <string name="onboarding_screen_2_description"><![CDATA[Je kunt een bewijs maken als je:<ul><li>Gevaccineerd bent</li><li>Positief getest bent en hersteld van corona</li><li>Negatief getest bent en geen corona hebt</li></ul>]]></string>
  <string name="onboarding_screen_4_title">Je bewijs heeft een QR-code</string>
  <string name="onboarding_screen_4_description">De QR-code op je bewijs wordt gecheckt bij de ingang van plekken en activiteiten. Of aan de grens.</string>
  <string name="onboarding_screen_3_title">QR-codes voor Nederland en internationaal</string>
  <string name="onboarding_screen_3_description">De app maakt QR-codes voor in Nederland en het buitenland. Ga je de grens over? Gebruik dan je internationale QR-code.</string>
  <string name="onboarding_next">Volgende</string>
  <string name="onboarding_finish">Aan de slag</string>
  <string name="privacy_policy_title">Zo gebruikt de app jouw gegevens</string>
  <string name="privacy_policy_description"><![CDATA[In de <a href=\"https://coronacheck.nl/nl/privacy-in-app\">privacyverklaring</a> staat hoe de app omgaat met jouw gegevens. Dit zijn de belangrijkste punten:]]></string>
  <string name="privacy_policy_1"><![CDATA[Jouw gegevens worden <b>nergens centraal opgeslagen</b>]]></string>
  <string name="privacy_policy_2"><![CDATA[Er worden <b>geen locatiegegevens</b> gebruikt of bewaard]]></string>
  <string name="privacy_policy_checkbox_text">Ik heb de privacyverklaring gelezen en begrijp hoe de app met mijn gegevens omgaat.</string>
  <string name="my_overview">Mijn bewijzen</string>
  <string name="my_overview_description">Bezoek je een plek in Nederland? Laat je Nederlandse QR-code en je identiteitsbewijs zien bij de ingang.</string>
  <string name="my_overview_description_eu"><![CDATA[Ben je in het buitenland of ga je de grens over? Gebruik dan altijd de internationale QR-code hieronder. Controleer voor vertrek welk bewijs je nodig hebt.]]></string>
  <string name="my_overview_description_eu_button_text">Welk bewijs is nodig op mijn bestemming?</string>
  <string name="my_overview_description_eu_button_link">https://www.nederlandwereldwijd.nl/reizen/reisadviezen</string>
  <string name="my_overview_no_qr_description"><![CDATA[Je kan een QR-code maken als je bent gevaccineerd, als je corona hebt gehad of als je bent getest bij een <a href=\"https://coronacheck.nl/nl/testafspraak-in-app\">aangesloten testlocatie</a>.]]></string>
  <string name="dialog_error_title">Sorry, er ging iets mis</string>
  <string name="dialog_error_message">Dat komt door een technische fout.</string>
  <string name="dialog_error_message_with_error_code">Dat komt door een technische fout (%1$s).</string>
  <string name="digid_login_cancelled_title">Inloggen afgebroken</string>
  <string name="digid_login_cancelled_description">Wil je jouw gegevens ophalen? Log dan opnieuw in met DigiD.</string>
  <string name="ok">Oke</string>
  <string name="settings">Instellingen</string>
  <string name="about_this_app">Over deze app</string>
  <string name="frequently_asked_questions">Meestgestelde vragen</string>
  <string name="privacy_statement">Privacyverklaring</string>
  <string name="terms_of_use">Gebruikersvoorwaarden</string>
  <string name="my_overview_test_result_title">Mijn bewijs</string>
  <string name="my_overview_test_result_international_title">Internationale QR</string>
  <string name="accessibility_label_my_overview_test_result_personal_data">Jouw persoonsgegevens: %1$s %2$s %3$s %4$s</string>
  <string name="accessibility_label_selected">Geselecteerd</string>
  <string name="accessibility_label_not_selected">Niet geselecteerd</string>
  <string name="my_overview_test_result_expires_in_hours_minutes">Verloopt over %1$s en %2$s</string>
  <string name="my_overview_test_result_expires_in">Verloopt over %1$s</string>
  <string name="my_overview_test_result_footer">Laat QR-code zien bij ingang</string>
  <string name="my_overview_test_result_button">Bekijk QR-code</string>
  <string name="general_loading_description">Bezig met laden, even geduld</string>
  <string name="my_overview_no_qr_make_appointment_title">Testafspraak maken</string>
  <string name="my_overview_no_qr_make_appointment_description">Wil je een QR-code maken? Laat je dan eerst testen op corona.</string>
  <string name="my_overview_no_qr_make_appointment_button">Maak afspraak</string>
  <string name="my_overview_no_qr_make_qr_title">QR-code maken</string>
  <string name="my_overview_no_qr_replace_qr_title">QR-code vervangen</string>
  <string name="my_overview_no_qr_make_qr_description">Zet jouw vaccinatie, testuitslag of herstel om in een QR-code.</string>
  <string name="my_overview_no_qr_replace_qr_button">Vervang bewijs</string>
  <string name="choose_provider_toolbar">Bewijs toevoegen</string>
  <string name="choose_provider_title">Waar ben je getest?</string>
  <string name="choose_provider_description">Blijkt uit de test dat je geen corona hebt? Dan kun je van de testuitslag een bewijs maken. Geef aan waar je getest bent.</string>
  <string name="choose_provider_commercial_title">Andere testlocatie</string>
  <string name="choose_provider_commercial_subtitle">Haal testuitslag op</string>
  <string name="choose_provider_ggd_title">GGD</string>
  <string name="choose_provider_ggd_subtitle">Log in met je DigiD</string>
  <string name="choose_provider_not_yet_tested">Ben je nog niet getest?</string>
  <string name="commercial_test_type_title">Testuitslag ophalen</string>
  <string name="commercial_test_type_description">Om je testuitslag op te halen heb je een ophaalcode nodig.</string>
  <string name="commercial_test_type_code_title">Ik heb een ophaalcode</string>
  <string name="commercial_test_type_code_toolbar_title">Testuitslag ophalen</string>
  <string name="commercial_test_type_qr_code_title">Ik heb een QR-code</string>
  <string name="commercial_test_type_no_code_title">Heb je geen ophaalcode?</string>
  <string name="commercial_test_type_no_code_received_title">Geen verificatiecode gekregen?</string>
  <string name="commercial_test_code_title">Testuitslag ophalen</string>
  <string name="commercial_test_code_description">Vul jouw ophaalcode in. Deze heb je van je testlocatie gekregen.</string>
  <string name="commercial_test_unique_code_hint">Bijv. BRB-YYYYYYYYY1-Z2</string>
  <string name="commercial_test_verification_code_hint">Bijv. 123456</string>
  <string name="commercial_test_button">Haal testuitslag op</string>
  <string name="create_qr_code_title">Van jouw testuitslag is een QR-code gemaakt</string>
  <string name="create_qr_code_description"><![CDATA[In de QR-code staat dat je <b>negatief getest</b> bent (geen corona) op <b>%1$s om %2$s</b>.<br\><br\>In deze app is alleen de anonieme QR-code zichtbaar, zonder verdere testinformatie.]]></string>
  <string name="create_qr_code_button">Naar mijn QR</string>
  <string name="menu_close">Sluiten</string>
  <string name="your_retrieved_vaccinations_description">Kloppen de gegevens? Als de gegevens van je vaccinatie kloppen kun je een bewijs maken.</string>
  <string name="dialog_negative_test_result_something_wrong_title">Klopt er iets niet?</string>
  <string name="dialog_negative_test_result_something_wrong_description"><![CDATA[Neem contact op met je testlocatie. Zij kunnen je helpen je gegevens aan te passen.]]></string>
  <string name="refresh_eu_items_title">Vaccinatiebewijs vernieuwen</string>
  <string name="refresh_eu_items_description"><![CDATA[Binnenkort vernieuwen we voor iedereen het vaccinatiebewijs. Daardoor krijg je ook toegang tot QR-codes van eerdere prikken.<br/><br/>Dat is bijvoorbeeld handig voor mensen die ergens heen willen waar hun laatste prik nog niet geldig is.<br/><br/>Je kunt je bewijs ook nu alvast vernieuwen als je dat wilt.]]></string>
  <string name="refresh_eu_items_button">Vernieuw bewijs</string>
  <string name="missing_dutch_certificate_title">Geen Nederlands vaccinatiebewijs</string>
  <string name="missing_dutch_certificate_introduction">Met jouw vaccinatie(s) heb je helaas geen recht op een Nederlands vaccinatiebewijs.</string>
  <string name="missing_dutch_certificate_second_vaccine_explanation"><![CDATA[<br/><b>Nieuwe vaccinatie gehad?</b><br/>Haal opnieuw je vaccinaties op. Je krijgt dan een Nederlands bewijs.]]></string>
  <string name="missing_dutch_certificate_retrieve_vaccination_button">Haal mijn vaccinaties op</string>
  <string name="missing_dutch_certificate_positive_text_explanation"><![CDATA[<b>Corona gehad vóór je eerste vaccinatie?</b><br/>Dan heb je vaak maar één prik nodig om volledig gevaccineerd te zijn. Haal je positieve testuitslag op om deze aan je vaccinatiebewijs toe te voegen.]]></string>
  <string name="missing_dutch_certificate_retrieve_test_button">Haal mijn testuitslag op</string>
  <string name="missing_dutch_certificate_explanation_more"><![CDATA[<br/><b>Meer weten?</b><br/>Kijk voor meer informatie op <a href=\"https://www.rijksoverheid.nl/onderwerpen/coronavirus-coronabewijs-en-coronatoegangsbewijs/vaccinatiebewijs/eisen-en-geldigheid\">deze pagina over de eisen en geldigheid van het vaccinatiebewijs</a>.]]></string>
</resources>