<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/my_overview" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />
    </group>
    <group
        android:id="@+id/info"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about_this_app"
            android:title="@string/about_this_app" />

        <item
            android:id="@+id/nav_frequently_asked_questions"
            android:title="@string/frequently_asked_questions" />

        <item
            android:id="@+id/nav_privacy_statement"
            android:title="@string/privacy_statement" />

        <item
            android:id="@+id/nav_terms_of_use"
            android:title="@string/terms_of_use" />
    </group>
</menu>
