<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <nl.rijksoverheid.ctr.design.views.AccessibilityHeaderWidget
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:text="@string/missing_dutch_certificate_title"
            android:textAppearance="@style/App.TextAppearance.MaterialComponents.Headline5.Montserrat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_dutch_certificate_introduction"
            android:textAppearance="@style/App.TextAppearance.MaterialComponents.Body1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <nl.rijksoverheid.ctr.design.views.HtmlTextViewWidget
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:htmlText="@string/missing_dutch_certificate_second_vaccine_explanation" />

        <Button
            android:id="@+id/vaccination_button"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="0dp"
            android:text="@string/missing_dutch_certificate_retrieve_vaccination_button"
            android:textColor="@color/link" />

        <nl.rijksoverheid.ctr.design.views.HtmlTextViewWidget
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:htmlText="@string/missing_dutch_certificate_positive_text_explanation" />

        <Button
            android:id="@+id/test_button"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="0dp"
            android:text="@string/missing_dutch_certificate_retrieve_test_button"
            android:textColor="@color/link" />

        <nl.rijksoverheid.ctr.design.views.HtmlTextViewWidget
            android:id="@+id/missing_dutch_certificate_explanation_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:enableHtmlLinks="true"
            android:layout_marginTop="32dp"
            app:htmlText="@string/missing_dutch_certificate_explanation_more"
            app:htmlTextColorLink="@color/link" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>
