<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/make_appointment_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    app:cardBackgroundColor="#68d2ff"
    app:cardCornerRadius="15dp"
    app:cardElevation="8dp"
    app:contentPadding="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/make_appointment_card_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/my_overview_no_qr_make_appointment_title"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintBottom_toTopOf="@+id/make_appointment_card_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/make_appointment_card_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:text="@string/my_overview_no_qr_make_appointment_description"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintBottom_toTopOf="@+id/make_appointment_card_button"
            app:layout_constraintEnd_toEndOf="@+id/make_appointment_card_title"
            app:layout_constraintStart_toStartOf="@+id/make_appointment_card_title"
            app:layout_constraintTop_toBottomOf="@+id/make_appointment_card_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/make_appointment_card_button"
            style="@style/Widget.App.Button.Surface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/my_overview_no_qr_make_appointment_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/make_appointment_card_title"
            app:layout_constraintTop_toBottomOf="@+id/make_appointment_card_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
